feat: get cat by id
